cambios de header, main, etc

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,14 @@
 @import './base.css';
+
+/*
+ |--------------------------------------------------------------------------
+ | Tailwind Directives
+ |--------------------------------------------------------------------------
+ |
+ | Import TailwindCSS directives and swipe out at build-time with all of
+ | the styles it generates based on your configured design system.
+ |
+ */ 
+ @tailwind base;
+ @tailwind components;
+ @tailwind utilities;
