--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,7 +47,7 @@
     }
 
     .btn-danger {
-        @apply py-2 px-4 pl-4 bg-red-500 text-white font-semibold rounded-lg shadow-sm hover:bg-red-700 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-75;
+        @apply py-2 px-4 pl-4 bg-error text-white font-semibold rounded-lg shadow-sm hover:bg-red-700 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-75;
     }
 
     .form-control{
@@ -67,7 +67,7 @@
     }
 
     body {
-        @apply bg-gray-100 text-gray-800;
+        @apply bg-gray-100 text-black;
     }
 
     h1{
