--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -130,6 +130,19 @@
         background-repeat: no-repeat;
     }
 
+
+    .div_custom{
+        @apply text-center py-16 bg-gradient-to-r from-primary-dark to-secondary text-white p-8 rounded;
+    }
+
+    
+    .div_custom_h2{
+        @apply text-black text-4xl font-bold mb-4;
+    }
+    .div_custom_p{
+        @apply text-2xl;
+    }
+
     
 }
 
