--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -123,7 +123,7 @@
     }
 
     .custom-class{
-        background: linear-gradient(45deg, #35fa7d, #2e6deb);
+        background: linear-gradient(45deg, #a7d740, #2e4e8f);
         font-size: 5.8em;
         transition: 0.5s ease;
     }
