--- a/src/components/index/IndexComponent.astro
+++ b/src/components/index/IndexComponent.astro
@@ -15,100 +15,40 @@ const { lang, t, title } = getI18nProps(Astro.params, 'home');
 ---
 
 <!-- Section - Hero  -->
-<div class="bg-gray-900">
+<div>
   
   <Navbar lang={lang} />
 
-  <div class="relative isolate overflow-hidden pt-14 z-0">
-    <img
-      src="/images/hero.webp"
-      alt="img"
-      class="absolute inset-0 z-[-10] size-full object-cover"
-    />
-    <div
-      class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
-      aria-hidden="true"
-    >
-      <!-- <div
-        class="relative left-[calc(50%-11rem)] aspect-1155/678 w-144.5 -translate-x-1/2 rotate-30 bg-linear-to-tr from-[#ff80b5] to-[#9089fc] opacity-20 sm:left-[calc(50%-30rem)] sm:w-288.75"
-        style="
-          clip-path: polygon(
-            74.1% 44.1%,
-            100% 61.6%,
-            97.5% 26.9%,
-            85.5% 0.1%,
-            80.7% 2%,
-            72.5% 32.5%,
-            60.2% 62.4%,
-            52.4% 68.1%,
-            47.5% 58.3%,
-            45.2% 34.5%,
-            27.5% 76.7%,
-            0.1% 64.9%,
-            17.9% 100%,
-            27.6% 76.8%,
-            76.1% 97.7%,
-            74.1% 44.1%
-          );
-        "
-      ></div> -->
-    </div>
-   <div class="mx-auto max-w-7xl px-6 lg:px-8">
-  <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56 space-y-12">
-    
-    <div class="flex justify-center items-center">
-      <img class="w-60 md:w-80 lg:w-96 max-w-full" src="/images/logo.svg" alt="logo">
-    </div>
-    
-    <div class="text-center space-y-8">
-      
-      <h1
-        class="whitespace-nowrap text-3xl md:text-5xl lg:text-6xl font-extrabold text-white"
-        data-i18n="home_heading"
-      >
-        {t('home.heading')}
-      </h1>
-      
-      <p
-        class="mt-4 text-lg sm:text-xl text-pretty text-white"
-        data-i18n="home_description"
-      >
-        {t('home.description')}
-      </p>
-      
-    </div>
-    
-  </div>
-</div>
 
-    <div
-      class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]"
-      aria-hidden="true"
-    >
-      <!-- <div
-        class="relative left-[calc(50%+3rem)] aspect-1155/678 w-144.5 -translate-x-1/2 bg-linear-to-tr from-[#ff80b5] to-[#9089fc] opacity-20 sm:left-[calc(50%+36rem)] sm:w-288.75"
-        style="
-          clip-path: polygon(
-            74.1% 44.1%,
-            100% 61.6%,
-            97.5% 26.9%,
-            85.5% 0.1%,
-            80.7% 2%,
-            72.5% 32.5%,
-            60.2% 62.4%,
-            52.4% 68.1%,
-            47.5% 58.3%,
-            45.2% 34.5%,
-            27.5% 76.7%,
-            0.1% 64.9%,
-            17.9% 100%,
-            27.6% 76.8%,
-            76.1% 97.7%,
-            74.1% 44.1%
-          );
-        "
-      ></div> -->
+
+
+  <div class="relative">
+    <div class="mx-auto max-w-7xl">
+      <div class="relative z-10 pt-14 lg:w-full lg:max-w-2xl">
+        <svg viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true" class="absolute inset-y-0 right-8 hidden h-full w-80 translate-x-1/2 transform fill-white lg:block">
+          <polygon points="0,0 90,0 50,100 0,100" />
+        </svg>
+
+        <div class="relative px-1 py-32 sm:py-40 lg:px-8 lg:py-56 lg:pr-0">
+          <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-xl">
+            <div class="hidden sm:mb-10 sm:flex">
+              <div class="relative rounded-full px-3 py-1 text-sm/6 text-gray-500 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
+                Anim aute id magna aliqua ad ad non deserunt sunt. <a href="#" class="font-semibold whitespace-nowrap text-indigo-600"><span aria-hidden="true" class="absolute inset-0"></span>Read more <span aria-hidden="true">&rarr;</span></a>
+              </div>
+            </div>
+            <h1 class="text-5xl font-semibold tracking-tight text-pretty text-primary sm:text-7xl">{t('home.heading')}</h1>
+            <p class="mt-8 text-lg font-medium text-pretty text-gray-500 sm:text-xl/8">{t('home.description')}</p>
+            
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="bg-gray-50 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
+      <img src="https://images.unsplash.com/photo-1483389127117-b6a2102724ae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80" alt="" class="aspect-3/2 object-cover lg:aspect-auto lg:size-full" />
     </div>
   </div>
+
+
+
 
 </div>
