--- a/src/components/index/IndexComponent.astro
+++ b/src/components/index/IndexComponent.astro
@@ -28,18 +28,13 @@ const { lang, t, title } = getI18nProps(Astro.params, 'home');
 
         <div class="relative px-1 py-32 sm:py-40 lg:px-8 lg:py-56 lg:pr-0">
           <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-xl">
-            <div class="hidden sm:mb-10 sm:flex">
-              <div class="relative rounded-full px-3 py-1 text-sm/6 text-gray-500 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
-                Anim aute id magna aliqua ad ad non deserunt sunt. <a href="#" class="font-semibold whitespace-nowrap text-indigo-600"><span aria-hidden="true" class="absolute inset-0"></span>Read more <span aria-hidden="true">&rarr;</span></a>
-              </div>
-            </div>
-            <h1 class="text-5xl font-semibold tracking-tight text-pretty text-primary sm:text-7xl">{t('home.heading')}</h1>
-            <p class="mt-8 text-lg font-medium text-pretty text-gray-500 sm:text-xl/8">{t('home.description')}</p>
-            
+            <h1 class="text-5xl font-semibold tracking-tight text-pretty text-primary-light sm:text-7xl">{t('home.heading')}</h1>
+            <p class="mt-8 text-lg font-medium text-pretty text-gray-500 sm:text-xl/8 text-center">{t('home.description')}</p>     
           </div>
         </div>
       </div>
     </div>
+
     <div class="bg-gray-50 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img src="https://images.unsplash.com/photo-1483389127117-b6a2102724ae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80" alt="" class="aspect-3/2 object-cover lg:aspect-auto lg:size-full" />
     </div>
