--- a/src/components/index/IndexComponent.astro
+++ b/src/components/index/IndexComponent.astro
@@ -36,7 +36,7 @@ const { lang, t, title } = getI18nProps(Astro.params, 'home');
     </div>
 
     <div class="bg-gray-50 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-      <img src="https://images.unsplash.com/photo-1483389127117-b6a2102724ae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80" alt="" class="aspect-3/2 object-cover lg:aspect-auto lg:size-full" />
+      <img src="/images/hero_2.webp" alt="" class="aspect-3/2 object-cover lg:aspect-auto lg:size-full" />
     </div>
   </div>
 
