--- a/src/components/about/AboutComponent.astro
+++ b/src/components/about/AboutComponent.astro
@@ -43,7 +43,7 @@ const { lang, t, title } = getI18nProps(Astro.params, 'about');
         data-aos-delay="200"
         data-aos-easing="ease-in-out"
       >
-        <img src="/images/plato1.webp" alt="Plato mediterráneo" class="w-full h-auto rounded-lg" />
+        <img src="/images/about_1.webp" alt="Plato mediterráneo" class="w-full h-auto rounded-lg" />
       </div>
     </div>
 
@@ -56,7 +56,7 @@ const { lang, t, title } = getI18nProps(Astro.params, 'about');
         data-aos-delay="100"
         data-aos-easing="ease-in-out"
       >
-          <img src="/images/restaurante.webp" alt="Interior del restaurante" class="w-full h-auto rounded-lg" />
+          <img src="/images/about_2.webp" alt="Interior del restaurante" class="w-full h-auto rounded-lg" />
       </div>
       <div
         class="about-img w-full md:w-1/2 mt-8 md:mt-0"
