add images contact

--- a/src/components/contact/ContactComponent.astro
+++ b/src/components/contact/ContactComponent.astro
@@ -15,7 +15,7 @@ const { lang, t, title } = getI18nProps(Astro.params, 'contact');
 <section
   id="contact"
   class="relative bg-fixed bg-center bg-cover bg-no-repeat"
-  style="background-image: url('/images/location.webp');"
+  style="background-image: url('/images/contact_2.webp');"
 >
   <!-- Overlay oscura -->
   <div class="absolute inset-0 bg-black/60"></div>
