--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -48,6 +48,10 @@ const author = 'lamevallar';
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
+
+
 
     <!-- Descripción que se muestra en Google -->
     <meta name="description" content={description}>
