--- a/src/components/about/AboutComponent.astro
+++ b/src/components/about/AboutComponent.astro
@@ -16,7 +16,7 @@ const { lang, t, title } = getI18nProps(Astro.params, 'about');
 <section id="about">
   <div class="container mx-auto px-6">
     <h2>{t("about.title")}</h2>
-    <p class="text-center mb-15">{t("about.description")}</p>
+    <p class="text-center mb-15 text">{t("about.description")}</p>
     
     <!-- Fila 1 -->
     <div class="about-row flex flex-wrap items-center justify-center md:justify-between">
@@ -29,12 +29,13 @@ const { lang, t, title } = getI18nProps(Astro.params, 'about');
         data-aos-easing="ease-in-out"
       >
         
-        <h2 class="text-3xl font-semibold text-primary text-center" data-i18n="about_title1">
+        <h2 class="text-3xl font-semibold text-primary text-center max-w-xl mx-auto" data-i18n="about_title1">
           {t('about.title1')}
         </h2>
-        <p class="mt-4 text-lg text-neutral-light text-center" data-i18n="about_txt1">
+        <p class="mt-4 text-xl text-neutral-light text-center max-w-xl mx-auto" data-i18n="about_txt1">
           {t('about.txt1')}
         </p>
+
       </div>
       <div
         class="about-img w-full md:w-1/2 mt-8 md:mt-0"
@@ -43,7 +44,7 @@ const { lang, t, title } = getI18nProps(Astro.params, 'about');
         data-aos-delay="200"
         data-aos-easing="ease-in-out"
       >
-        <img src="/images/about_1.webp" alt="Plato mediterráneo" class="w-full h-auto rounded-lg" />
+        <img src="/images/about_2.svg" alt="Plato mediterráneo" class="w-full h-auto rounded-lg" />
       </div>
     </div>
 
@@ -56,7 +57,7 @@ const { lang, t, title } = getI18nProps(Astro.params, 'about');
         data-aos-delay="100"
         data-aos-easing="ease-in-out"
       >
-          <img src="/images/about_2.webp" alt="Interior del restaurante" class="w-full h-auto rounded-lg" />
+          <img src="/images/about_1.svg" alt="Interior del restaurante" class="w-full h-auto rounded-lg" />
       </div>
       <div
         class="about-img w-full md:w-1/2 mt-8 md:mt-0"
@@ -65,12 +66,13 @@ const { lang, t, title } = getI18nProps(Astro.params, 'about');
         data-aos-delay="200"
         data-aos-easing="ease-in-out"
       >
-      <h2 class="text-3xl font-semibold text-primary text-center" data-i18n="about_title2">
+      <h2 class="text-3xl font-semibold text-primary text-center max-w-xl mx-auto" data-i18n="about_title2">
           {t('about.title2')}
         </h2>
-        <p class="mt-4 text-lg text-neutral-light text-center" data-i18n="about_txt2">
-          {t('about.txt2')}
-        </p>
+        <p class="mt-4 text-xl text-neutral-light text-center max-w-xl mx-auto" data-i18n="about_txt2">
+  {t('about.txt2')}
+</p>
+
         
       </div>
     </div>
