--- a/src/components/index/IndexComponent.astro
+++ b/src/components/index/IndexComponent.astro
@@ -41,7 +41,7 @@ const { lang, t, title } = getI18nProps(Astro.params, 'home');
   </div>
 
 <section class="my-20 px-4">
-  <h2 class="text-center text-3xl font-bold text-primary mb-6">Descubre Famindex</h2>
+  <h2 class="text-center text-3xl font-bold text-primary mb-6">Descubre cómo transformamos ideas en tecnología</h2>
 
   <div class="mx-auto w-full max-w-3xl aspect-video rounded-xl overflow-hidden shadow-lg">
     <video
@@ -51,8 +51,5 @@ const { lang, t, title } = getI18nProps(Astro.params, 'home');
     ></video>
   </div>
 </section>
-
-
-
 
 </div>
