--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -17,8 +17,8 @@ const keyword = t('seo.home.keywords');
 // OG
 const ogTitle = t('seo.home.title');
 const ogDescription = t('seo.home.ogDescription');
-const ogImage = "https://lamevallar.splytin.com/images/og-home.jpg";
-const ogURL = "https://lamevallar.splytin.com";
+const ogImage = "https://famindex.com/images/og-home.jpg";
+const ogURL = "https://famindex.com";
 const ogType = t('seo.home.ogType');
 
 ---
