--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -36,7 +36,7 @@ const ogType = t('seo.contact.ogType');
   ogType={ogType}
 >
 
-  <div class="section">
+  <div>
 
     <ContactComponent title={title}/>
 
